--- a/app/static/index.html
+++ b/app/static/index.html
@@ -11,7 +11,7 @@
     body{ margin:0; font-family: Arial, Helvetica, sans-serif; background:var(--bg); color:var(--text); }
     header{ padding:12px; border-bottom:1px solid #1f2937; display:flex; gap:10px; align-items:center; flex-wrap:wrap; }
     .panel{ background:var(--panel); border:1px solid #1f2937; border-radius:10px; padding:12px; }
-    .grid{ display:grid; gap:8px; }
+    .grid{ display:grid; gap:3px; column-gap:1px; }
     .grid .cell{ display:flex; align-items:center; justify-content:center; border:2px solid #1f2937; border-radius:50%; width:50px; height:50px; cursor:pointer; font-weight:bold; font-size:14px; }
     .cell.empty{ background:#0e1726; color:#9ca3af; }
     .cell.occupied{ background:rgba(37,99,235,.2); border-color:#2646c4; }
@@ -21,7 +21,7 @@
     input, select{ background:#0e1726; color:var(--text); border:1px solid #1f2937; padding:8px 10px; border-radius:8px; }
     .banner{ background:#1f2937; border:1px solid #374151; padding:12px; border-radius:10px; color:#e5e7eb; margin-bottom:8px; }
     .error{ background:#3b0d0d; border:1px solid #7f1d1d; }
-    #log{ font-family: Consolas, monospace; font-size:12px; white-space:pre-wrap; color:#93c5fd; }
+    #log{ display:none; font-family: Consolas, monospace; font-size:12px; white-space:pre-wrap; color:#93c5fd; }
   </style>
 </head>
 <body>
@@ -47,7 +47,6 @@
       <div id="containerTitle" style="margin:8px 0; font-weight:600"></div>
       <div id="grid" class="grid" role="grid"></div>
       <div id="details" style="margin-top:8px; font-size:13px; color:#9ca3af">Click a cell to edit status or vial name (1-81).</div>
-      <div id="log"></div>
     </div>
   </main>
 <script>
